# AI-Guide-and-Demos-zh_CN

./: .gitattributes  .gitignore  0. 阿里大模型API获取步骤.md  1. LLM API 使用演示——从环境配置到多轮对话.ipynb  1. 初识LLM API：环境配置与多轮对话演示.md  10. Top-K vs Top-P：生成式模型中的采样策略与 Temperature 的影响.md  11. DPO 微调示例：根据人类偏好优化LLM大语言模型.md  12. Inseq 特征归因：可视化解释 LLM 的输出.md  2. 简单入门：通过API与Gradio构建AI应用.md  3. 进阶指南：自定义 Prompt 提升大模型解题能力.md  4. 认识 LoRA：从线性层到注意力机制.md  5. 理解 Hugging Face 的 `AutoModel` 系列：不同任务的自动模型加载类.md  6. 开始实践：部署你的第一个LLM大语言模型.md  8. 尝试微调LLM：让它会写唐诗.md  9. 深入理解 Beam Search：原理, 示例与代码实现.md  LICENSE  README.md  a. 使用 HFD 加快 Hugging Face 模型和数据集的下载.md  pyproject.toml
CodePlayground/: README.md  chat.py  config.yaml  generate_images.py  sd_lora.py  summarizer.py  train_lora.py
Demos/: 01. LLM API 使用演示——从环境配置到多轮对话.ipynb  02. 使用 API 快速搭建你的第一个 AI 应用.ipynb  03. 自定义 Prompt 提升大模型解题能力——Gradio 与 ipywidgets 版.ipynb  03. 自定义 Prompt 提升大模型解题能力——Gradio 与 ipywidgets版.ipynb  04. Hugging Face AutoModel 示例合集.ipynb  05. 尝试部署你的第一个LLM大语言模型.ipynb  05. 尝试部署你的第一个语言模型.ipynb  06. 尝试微调 LLM：让它会写唐诗.ipynb  07. Beam Search 示例代码.ipynb  08. Top-K vs Top-P 采样与 Temperature 示例代码.ipynb  09. DPO 微调：根据偏好引导 LLM 的输出.ipynb  09. DPO 微调：根据偏好引导LLM的输出.ipynb  10. Inseq：可视化解释 LLM 的输出.ipynb  10. Inseq：可视化解释LLM的输出.ipynb  11. 了解人工智能可能存在的偏见.ipynb  12.  应用 LoRA 到大模型的简单示例（PEFT）.ipynb  12. 应用 LoRA 到大模型的简单示例（PEFT）.ipynb  13. 轻松开始你的第一次 AI 视频总结（API 版）.ipynb  13a. 轻松开始你的第一次 AI 视频总结（API 版） - 完整版.ipynb  13b. 轻松开始你的第一次 AI 视频总结（API 版）- 精简版.ipynb  14. 尝试使用 LoRA 微调 Stable Diffusion 模型.ipynb  14a. 尝试使用 LoRA 微调 Stable Diffusion 模型.ipynb  14b. 尝试使用 LoRA 微调 Stable Diffusion 模型 - 精简版.ipynb  15. 探究非对称量化和对称量化 - INT8.ipynb  16a. .ipynb  16a. 使用 Transformers 加载量化后的 LLM 大模型（GPTQ & AWQ）.ipynb  16a. 使用 Transformers 部署量化后的 LLM 大模型（GPTQ & AWQ）.ipynb  16b. 使用 Llama-cpp-python 加载量化后的 LLM 大模型（GGUF）.ipynb  16b. 使用 Llama-cpp-python 部署量化后的 LLM 大模型（GGUF）.ipynb  17. 使用 LangChain 实现 RAG.ipynb  18. 数据增强：torchvision.transforms 常用方法演示.ipynb  19. BPE vs WordPiece：理解 Tokenizer 的工作原理与子词分割方法.ipynb  2. 使用API快速搭建你的第一个AI应用.ipynb  20. 嵌入层 nn.Embedding() 代码示例.ipynb  21. Bert 微调抽取式问答任务 - 作业样例代码.ipynb  21a. Bert 微调抽取式问答任务 - 作业样例代码.ipynb  21a. 微调 LLM：实现抽取式问答.ipynb  21b. .ipynb  21b. Bert 微调抽取式问答任务 - 作业样例代码.ipynb  4. Hugging Face AutoModel 示例合集.ipynb  (+13 more)
Guide/: $125 订阅撬动 $2000 API 额度：这是我最终选择 Claude Code Max 5x 的理由.md  00. 大模型 API 获取步骤.md  00. 阿里大模型 API 获取步骤.md  00. 阿里大模型API获取步骤.md  01. 初识 LLM API：环境配置与多轮对话演示.md  01. 初识LLM API：环境配置与多轮对话演示.md  02. 简单入门：通过 API 与 Gradio 构建 AI 应用.md  02. 简单入门：通过API与Gradio构建AI应用.md  03. 进阶指南：自定义 Prompt 提升大模型解题能力.md  04. 认识 LoRA：从线性层到注意力机制.md  05. 理解 Hugging Face 的 `AutoModel` 系列：不同任务的自动模型加载类.md  06. 开始实践：部署你的第一个LLM大语言模型.md  06. 开始实践：部署你的第一个语言模型.md  07. 探究模型参数与显存的关系以及不同精度造成的影响.md  08. 尝试微调 LLM：让它会写唐诗.md  08. 尝试微调LLM：让它会写唐诗.md  09. 深入理解 Beam Search：原理, 示例与代码实现.md  10. Top-K vs Top-P：生成式模型中的采样策略与 Temperature 的影响.md  11. DPO 微调示例：根据人类偏好优化 LLM 大语言模型.md  11. DPO 微调示例：根据人类偏好优化LLM大语言模型.md  12. Inseq 特征归因：可视化解释 LLM 的输出.md  13. 了解人工智能可能存在的偏见.md  14. PEFT：在大模型中快速应用 LoRA.md  15. 0 基础也能轻松实现 AI 视频摘要.md  15. 用 API 实现 AI 视频摘要：动手制作属于你的 AI 视频助手.md  16. 用 LoRA 微调 Stable Diffusion：拆开炼丹炉，动手实现你的第一次 AI 绘画.md  17. 浅谈 RTN 模型量化：非对称 vs 对称.md  17. 浅谈模型量化：非对称 vs 对称.md  18. .md  18. 模型量化技术概述及 GGUF & GGML 文件格式解析.md  18. 模型量化技术概述及 GGUF:GGML 文件格式解析.md  19. .md  19a. 从加载到对话：使用 Transformers 本地运行量化 LLM 大模型（GPTQ & AWQ）.md  19a. 从部署到对话：使用 Transformers 本地运行量化 LLM 大模型（GPTQ & AWQ）.md  19b. 从加载到对话：使用 Llama-cpp-python 本地运行量化 LLM 大模型（GGUF）.md  19b. 从部署到对话：使用 Llama-cpp-python 本地运行量化LLM 大模型（GGUF）.md  20. RAG 入门实践：从文档拆分到向量数据库与问答构建.md  21. .md  21. BPE vs WordPiece：理解 Tokenizer 的工作原理与子词分割方法.md  22. 作业 - Bert 微调抽取式问答.md  (+32 more)
Learn/: 02.py  chat.py
PaperNotes/: BERT 论文精读.md  BERT.md  GPT 论文精读.md  GPT.md  (+6 more)
(+20 files in other folders)
