[project]
name = "ai-guide-and-demos-zh-cn"
version = "1.0.0"
description = "Add your description here"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "colorama>=0.4.6",
    "datasets>=4.0.0",
    "fastapi>=0.116.1",
    "fsspec>=2025.3.0",
    "gradio>=5.41.0",
    "inseq>=0.6.0",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.5",
    "mcp>=1.12.3",
    "notebook>=7.4.5",
    "numpy>=2.1.3",
    "openai>=1.99.1",
    "peft>=0.17.0",
    "sacremoses>=0.1.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "tf-keras>=2.19.0",
    "tiktoken>=0.11.0",
    "torch>=2.6",
    "torchaudio>=2.6",
    "torchvision>=0.19",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
    "trl>=0.21.0",
    "uvicorn>=0.35.0",
]
