[project]
name = "ai-guide-and-demos-zh-cn"
version = "1.0.0"
description = "Add your description here"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "colorama>=0.4.6",
    "datasets[audio]>=4.0.0",
    "diffusers>=0.37.1",
    "fastapi>=0.116.1",
    "flask>=3.1.3",
    "fsspec>=2025.3.0",
    "gitpython>=3.1.46",
    "gradio>=5.41.0,<6.0",
    "inseq>=0.6.0",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.5",
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "mcp>=1.12.3",
    "notebook>=7.4.5",
    "numpy>=2.1.3",
    "openai>=1.99.1",
    "openai-whisper>=20250625",
    "optimum>=1.27.0,<2.0",
    "pandas>=2.3.1",
    "peft>=0.17.0,<0.18",
    "pillow>=10.2,<12.0",
    "pip>=25.0",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.1",
    "srt>=3.5.3",
    "tiktoken>=0.11.0",
    "torch>=2.6,<2.8",
    "torchaudio>=2.6,<2.8",
    "torchvision>=0.21,<0.23",
    "tqdm>=4.67.1",
    "transformers>=4.55.0,<4.57",
    "trl>=0.21.0",
    "uvicorn>=0.35.0",
    "einops>=0.8.0",
    "faiss-cpu>=1.8.0",
    "fairscale>=0.4.13",
    "gptqmodel>=4.2.5",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "opencv-contrib-python>=4.10.0",
    "sentence-transformers>=5.0.0",
    "timm>=1.0.0",
    "unstructured[md]>=0.22.0",
    "diskcache>=5.6.0",
    "logbar>=0.0.4",
    "facenet-pytorch>=2.6.0",
    "llama-cpp-python>=0.3.0",
    "device-smi>=0.4.0",
    "hf-transfer>=0.1.9",
    "random-word>=1.0.13",
    "tokenicer>=0.0.5",
    "nltk>=3.9",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[[tool.uv.index]]
url = "https://pypi.org/simple/"

[tool.uv]
override-dependencies = ["torch>=2.6,<2.8", "torchvision>=0.21,<0.23", "torchaudio>=2.6,<2.8", "numpy>=2.1.3"]
# gptqmodel 的 setup.py 在构建期需要探测 torch，隔离构建环境里没有它会失败；
# 免隔离后复用当前环境的 torch（全新环境需先让 torch 落地：uv sync 报错后重试一次即可）
no-build-isolation-package = ["gptqmodel"]
